--- a/README.mkd
+++ b/README.mkd
@@ -15,6 +15,8 @@ A slide is what we define to be the 'view' of the application. You can show any 
 Slides are, in a way, the plugins of Jeeves. This means that you can download slides other people created and add them to your own installation to fully personalise your narrowcasting system.
 
 # Sounds good! So, how do I set it up?
+You'll need to have [nodejs + npm](http://nodejs.org/) installed before starting.
+
 First, you will need to download and cd to the source code by cloning the git repository:
 ```
 git clone <urlhere>
